# RevierHub

./: .gitignore  README.md  revierhub_setup_guide.html
Documents/: Force_Install_on_device.txt  interaction.txt
Documents/icons/: Menue_draft.xcf
RevierHub/: .qmlls.ini  CMakeLists.txt  Main.qml  getlivelocation.cpp  getlivelocation.hpp  main.cpp  qml.qrc  trailmanager.cpp  trailmanager.hpp
RevierHub/Database/: databasemanager.cpp  databasemanager.hpp
RevierHub/android/: AndroidManifest.xml  AndroidManifest.xml.bak  build.gradle
